# ospf_mini

./: .gitignore  CMakeLists.txt  PinClass.cpp  PinClass.h  README.md  keep_repo_fresh.sh  library.properties  ospf_mini_dep.cpp  ospf_mini_dep.h  ospf_mini_lib.h
PinClass/: PinClass.cpp
android/: settings.gradle
android/app/: build.gradle
app/: build.gradle
html/: index.html  utils.js
html/circles/: circle.html  circle2.html  circle_loop.html
html/flespi_client/: README.md  draw.js  index.html  main.js
html/webbluetooth/: readme.txt
main/: main.cpp  main_antispin.cpp  readme.txt
mbed/: README.md
mbed/all_files_ARDUINO_NANO33BLE/: mbed_config.h
notes/: BLE_server_android_as_client.txt  BLE_server_hang_debugging.txt  BLE_server_nano_as_client.txt  write_a_file.cpp.txt
ospf_mini_sketch/: mbed_conf.ino  ospf_mini.ino  ospf_mini_sketch.ino
python/: README.md  beacon_dist_100.csv  beacon_dist_50.csv  beacons_record_1  drawing_overlapping.py  flespi_client.py  map.py  moving_average.py  moving_mean.py  moving_mean_preprocess.py  save-beacon-session.csv  tets_time.py
shared/: readme.txt
sketch/BLE_client3/: BLE_client3.ino
sketch/BLE_client_detect_multiple_server/: BLE_client_detect_multiple_server.ino
sketch/BLE_client_tagbutton/: BLE_client_tagbutton.ino
sketch/BLE_server/: BLE_server.ino
sketch/BLE_server_multibyte/: BLE_server_multibyte.ino
sketch/MbedThreadClassExercise/: MbedThreadClassExercise.ino
sketch_ospf_mini_main/: sketch_ospf_mini_main.ino
src/: ospf_mini_dep.cpp  ospf_mini_dep.h  ospf_mini_lib.cpp  ospf_mini_lib.h
src/utility/: ATT.cpp  (+1 more)
(+40 files in other folders)
